--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,35 +2,27 @@ name: workflow
 
 on:
   push:
-    branches:
-      - main
-    paths-ignore:
-      - 'README.md'
+    branches: [ main ]
+    paths-ignore: [ 'README.md' ]
 
 jobs:
   integration:
     name: Continuous Integration
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Lint code
-        run: echo "Linting repository"
-
-      - name: Run unit test
-        run: echo "Running unit tests"
+      - uses: actions/checkout@v4
+      - run: echo "Linting repository"
+      - run: echo "Running unit tests"
 
   build-and-push-ecr-image:
     name: Continuous Delivery
     needs: integration
     runs-on: ubuntu-latest
     env:
-      ECR_REPOSITORY: my-app              # <-- change to your ECR repo name
-      IMAGE_TAG: ${{ github.sha }}
+      ECR_REPOSITORY: my-app          # your ECR repo name
+      IMAGE_TAG: latest               # or ${{ github.sha }}
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Install Utilities
         run: |
@@ -51,11 +43,18 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: ${{ env.ECR_REPOSITORY_NAME }}
-          IMAGE_TAG: latest
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: ${{ env.ECR_REPOSITORY }}
+          IMAGE_TAG: ${{ env.IMAGE_TAG }}
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-      
+          set -euo pipefail
+          IMAGE_URI="${ECR_REGISTRY}/${ECR_REPOSITORY}:${IMAGE_TAG}"
+
+          echo "Building ${IMAGE_URI}"
+          docker build -t "${IMAGE_URI}" .
+
+          echo "Pushing ${IMAGE_URI}"
+          docker push "${IMAGE_URI}"
+
+          # set an output for later steps (new syntax)
+          echo "image=${IMAGE_URI}" >> "$GITHUB_OUTPUT"
