--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
     needs: integration
     runs-on: ubuntu-latest
     env:
-      IMAGE_TAG: latest                    # or use ${{ github.sha }}
+      IMAGE_TAG: latest            # or use ${{ github.sha }}
     steps:
       - uses: actions/checkout@v4
 
@@ -41,8 +41,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # (Optional) Ensure the ECR repo exists
-      - name: Ensure ECR repository exists
+      - name: Ensure ECR repository exists (optional)
         run: |
           set -euo pipefail
           aws ecr describe-repositories --repository-names "${{ secrets.ECR_REPOSITORY_NAME }}" >/dev/null 2>&1 || \
@@ -66,15 +65,16 @@ jobs:
           echo "Pushing ${IMAGE_URI}"
           docker push "${IMAGE_URI}"
           echo "image=${IMAGE_URI}" >> "$GITHUB_OUTPUT"
+
   Continuous-Deployment:
+    name: Continuous Deployment
     needs: build-and-push-ecr-image
     runs-on: self-hosted
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -83,19 +83,43 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-      
-      
-      - name: Pull latest images
+
+      - name: Docker sanity check
         run: |
-         docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
-         
-      #- name: Stop and remove  container if running
-       # run: |
-        # docker ps -q --filter "name=networksecurity" | grep -q . && docker stop networksecurity && docker rm -fv networksecurity
-       
+          docker --version
+          docker info | sed -n '1,50p'
+
+      - name: Pull latest image
+        env:
+          IMAGE_URI: ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+        run: |
+          set -euo pipefail
+          docker pull "${IMAGE_URI}"
+
+      - name: Stop and remove container if running
+        run: |
+          set -euo pipefail
+          CN=networksecurity
+          docker ps -q -f name=${CN} | grep -q . && docker stop ${CN} || true
+          docker ps -aq -f name=${CN} | grep -q . && docker rm -f ${CN} || true
+
       - name: Run Docker Image to serve users
+        env:
+          IMAGE_URI: ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
         run: |
-         docker run -d -p 8080:8080 --ipc="host" --name=networksecurity -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}'  ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
-      - name: Clean previous images and containers
-        run: |
-         docker system prune -f
+          set -euo pipefail
+          docker run -d --pull=always \
+            --name=networksecurity \
+            --restart unless-stopped \
+            --ipc="host" \
+            -p 8080:8080 \
+            -e AWS_ACCESS_KEY_ID \
+            -e AWS_SECRET_ACCESS_KEY \
+            -e AWS_REGION \
+            "${IMAGE_URI}"
+
+      - name: Clean dangling images
+        run: docker image prune -f || true
